# Anomalous-Market-Behavior-Recognition-with-Machine-Learning

./: .coverage 2  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  config.yaml  conftest.py  pyproject.toml  pytest.ini  requirements.txt  run_pipeline.sh  setup.py  smoke_test_imports.py  test_imports.py  update_metrics.py  verify_imports.py
.github/workflows/: ci.yml
notebooks/: exploratory_data_analysis.ipynb
sql/: schema.sql
src/: __init__.py  data_loader.py  evaluate.py  model.py  preprocess.py  train.py
src/data/: download.py  features.py  ingest_sql.py
src/models/: __init__.py  lstm.py  markov_smoother.py  thresholds.py
src/pipelines/: __init__.py  evaluate.py  predict.py  train.py
src/utils/: config.py  io.py  logging_config.py  seed.py
src/viz/: dashboard.py
tests/: __init__.py  conftest.py  test_end_to_end.py  test_features.py  test_lstm.py  test_markov.py
